live-config-foobar (1-1) unstable; urgency=low

  * Initial release.

 -- John Doe <john@example.org>  Tue, 11 Jan 2011 14:44:37 +0100