@@ -12,4 +12,4 @@ point. The following things should minimally be changed:
   * Replace any mentioning of 'foobar', 'Foobar' and 'FOOBAR' with the name of
     your custom script or project name.
 
- -- Daniel Baumann <daniel@debian.org>  Mon, 24 May 2010 09:14:49 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sun, 26 Feb 2012 21:15:40 +0100
