@@ -1,3 +1,12 @@
 # /etc/live/config.conf.d/foobar.conf
 
+## live-config-foobar(7) - Additional Configuration Scripts for Debian Live
+## Copyright (C) 2006-2012 Daniel Baumann <daniel@debian.org>
+## Copyright (C) 2012 John Doe <john@example.org>
+##
+## live-config-foobar comes with ABSOLUTELY NO WARRANTY; for details see COPYING.
+## This is free software, and you are welcome to redistribute it
+## under certain conditions; see COPYING for details.
+
+
 LIVE_FOOBAR="foobar"
