@@ -1,5 +1,13 @@
 #!/bin/sh
 
+## live-config(7) - System Configuration Scripts
+## Copyright (C) 2006-2012 Daniel Baumann <daniel@debian.org>
+##
+## live-config comes with ABSOLUTELY NO WARRANTY; for details see COPYING.
+## This is free software, and you are welcome to redistribute it
+## under certain conditions; see COPYING for details.
+
+
 set -e
 
 DATE="$(LC_ALL=C date +%Y\\\\-%m\\\\-%d)"
