@@ -11,7 +11,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-CONFIG 7 2012\-02\-06 3.0~a32 "Debian Live Projekt"
+.TH LIVE\-CONFIG 7 18.03.2012 3.0~a33\-1 "Debian Live Projekt"
 
 .SH NAME
 \fBlive\-config\fP \- System Konfiguration Skripte
