@@ -6,7 +6,7 @@
 .\" under certain conditions; see COPYING for details.
 .\"
 .\"
-.TH LIVE\-CONFIG 7 2012\-02\-06 3.0~a32 "Debian Live Project"
+.TH LIVE\-CONFIG 7 2012\-03\-18 3.0~a33-1 "Debian Live Project"
 
 .SH NAME
 \fBlive\-config\fR \- System Configuration Scripts
