@@ -11,7 +11,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-CONFIG 7 2012\-02\-06 3.0~a32 "Proyecto Debian Live"
+.TH LIVE\-CONFIG 7 18.03.2011 3.0~a33\-1 "Proyecto Debian Live"
 
 .SH NOMBRE
 \fBlive\-config\fP \- Scripts de configuración del sistema
