@@ -43,7 +43,12 @@ if [ -z "\${DISPLAY}" ] && [ \$(tty) = /dev/tty1 ]
 then
 	while true
 	do
-		startx
+		if grep -qs quiet /proc/cmdline
+		then
+			startx > /dev/null 2>&1
+		else
+			startx
+		fi
 	done
 fi
 EOF
